--- a/package.json
+++ b/package.json
@@ -12,8 +12,18 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.8.0",
+    "@emotion/react": "^11.14.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-table": "^8.21.2",
+    "axios": "^1.7.9",
+    "moment": "^2.30.1",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
