--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "test": "vitest --watch=false",
+    "coverage": "vitest run --coverage",
     "preview": "vite preview",
     "prepare": "husky"
   },
